feat: 完善了常量寄存器的定义